# agentic-research-loop

./: .gitignore  .mcp.json  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  program.md  pyproject.toml
.agents/docs/: architecture.md  runtime-contract.md  runtime-playbook.md  setup.md
.claude/: settings.json
.codex/: config.toml
.cursor/: mcp.json
.github/workflows/: test.yml
agents/docs/: architecture.md  runtime-contract.md  setup.md
config/: snowflake-mcp-tools.yaml  sources.json.example
config/runners/: claude-local.json  claude.json  codex.json  demo.json
examples/claude-local-export-reliability/: README.md
examples/claude-local-registration-drop/: README.md  notes.md  plan.md  report.md  status.md
examples/demo-export-reliability/: README.md  brief.md  notes.md  plan.md  replay.html  report.md  status.md
examples/demo-registration-drop/: README.md  brief.md  notes.md  plan.md  (+3 more)
runners/: demo_runner.py
scripts/: check_claude_setup.py  setup-dev.sh
tests/: conftest.py  test_advisory.py  test_check_claude_setup.py  test_ci_workflow.py  test_cli.py  test_cli_google.py  test_cli_runner.py  test_demo_runner.py  test_from_spec.py  test_google_api.py  test_hints.py  test_init_from_spec.py  test_loop_artifacts.py  test_loop_cli_output.py  test_loop_integration.py  test_loop_markers.py  test_loop_misc.py  test_loop_plan_step.py  test_mcp_configs_consistent.py  test_prompts.py  test_readonly_contract.py  test_runtime_state.py  test_source_bundles.py  test_sources.py  test_validation_and_publish.py  test_viz.py
viz/: generate.py
(+130 files in other folders)
